# ASIO-PQ

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  appveyor.yml
include/asiopq/: asio.hpp  connect.hpp  connection.hpp  exception.hpp  future.hpp  operation.hpp  optional.hpp  query.hpp  reset.hpp  scope.hpp
src/: configure.hpp.in  connect.cpp  connection.cpp  exception.cpp  operation.cpp  query.cpp  reset.cpp
src/test/: integration.cpp  login.hpp.in  scope.cpp
